--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.idauto.oss.jcifs</groupId>
-    <artifactId>vfs-jcifs-ng</artifactId>
+    <groupId>net.new-proimage</groupId>
+    <artifactId>vfs-jcifs</artifactId>
     <packaging>jar</packaging>
     <version>1.0.1</version>
 
-    <name>VFS JCIFS-NG Provider</name>
-    <description>A jcifs-ng based file system provider for Apache Commons VFS</description>
-    <url>https://github.com/IdentityAutomation/vfs-jcifs-ng</url>
+    <name>VFS JCIFS Provider</name>
+    <description>A jcifs based file system provider for Apache Commons VFS</description>
+    <url>https://github.com/new-proimage/vfs-jcifs-ng</url>
 
     <licenses>
         <license>
@@ -27,21 +27,27 @@
             <organization>Identity Automation</organization>
             <organizationUrl>http://www.identityautomation.com</organizationUrl>
         </developer>
+        <developer>
+            <name>Ilan Goldfeld</name>
+            <organization>New ProImage</organization>
+            <organizationUrl>http://new-proimage.com</organizationUrl>
+        </developer>
+
     </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <commons-vfs2.version>2.2</commons-vfs2.version>
-        <eu.agno3.jcifs.jcifs-ng.version>2.0.4</eu.agno3.jcifs.jcifs-ng.version>
+        <commons-vfs2.version>2.7.0</commons-vfs2.version>
+        <org.codelibs.jcifs.version>2.1.19</org.codelibs.jcifs.version>
 
         <test.fork.count>1</test.fork.count>
     </properties>
 
     <scm>
-        <connection>scm:git:https://github.com/IdentityAutomation/vfs-jcifs-ng.git</connection>
-        <developerConnection>scm:git:https://github.com/IdentityAutomation/vfs-jcifs-ng.git</developerConnection>
-        <url>https://github.com/IdentityAutomation/vfs-jcifs-ng</url>
+        <connection>scm:git:https://github.com/new-proimage/vfs-jcifs-ng.git</connection>
+        <developerConnection>scm:git:https://github.com/new-proimage/vfs-jcifs-ng.git</developerConnection>
+        <url>https://github.com/new-proimage/vfs-jcifs-ng</url>
     </scm>
 
     <distributionManagement>
@@ -76,9 +82,9 @@
             <scope>provided</scope>
         </dependency>
 		<dependency>
-                <artifactId>jcifs-ng</artifactId>
-                <groupId>eu.agno3.jcifs</groupId>
-                <version>${eu.agno3.jcifs.jcifs-ng.version}</version>
+                <artifactId>jcifs</artifactId>
+                <groupId>org.codelibs</groupId>
+                <version>${org.codelibs.jcifs.version}</version>
                 <exclusions>
                     <exclusion>
                         <artifactId>servlet-api</artifactId>
