--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.new-proimage</groupId>
+    <groupId>newproimage.com.vfs-jcifs-smb</groupId>
     <artifactId>vfs-jcifs-smb</artifactId>
     <packaging>jar</packaging>
     <version>0.9.1</version>
